Check if pt needed data is defined. Determines application routing in .config, as well as dom behavior in view

--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -122,5 +122,5 @@
     </table>
     <a href="#" ng-click="addDrugInput()" ng-if="standAlone">+ Add a medication</a>
   </div>
-<button class="submit-button" ng-click="goToDataViz()" ng-disabled="dataForm.$invalid || !buttonsSelected() || !pt.race">Get Treatment Recommendations</button>
+<button class="submit-button" ng-click="goToDataViz()" ng-disabled="dataForm.$invalid || !pt.hasNeededData">Get Treatment Recommendations</button>
 </form>
