Add db helpers into controllers folder. Refactor to use base url (domain.com/#/) for the app instead of (domain.com/app/#/). Add about page and about page route handler.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -449,6 +449,15 @@ a {
   color: #606D7B;
 }
 
+img.logo {
+  margin: 0 auto;
+  max-width: 90%;
+}
+
+p a {
+  font-size: inherit;
+}
+
 /* Form validation */
 
 .data-form input.ng-invalid.ng-dirty {
