Added email send functionality. Updated about page.

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -4,3 +4,4 @@
 
 <p>The development of the application was sponsored by <a href="http://moxehealth.com">Moxe Health</a>, a <a href="http://rockhealth.com/">Rock Health</a> company. The application was primarily developed on top of Moxe Health's EHR integration service, Substrate, which allowed us to write software for a single, simple data structure and have it accept any format of EHR.</p> 
 
+M0xeH3alth!!
