--- a/app/css/main.css
+++ b/app/css/main.css
@@ -157,11 +157,14 @@ div.medications tr td {
 
 /* Medication recommendation styling */
 
-span.add-medication {
+span.add-medication,
+span.remove-medication {
   font-size: 12px;
   display: block;
 }
-span.add-medication input {
+
+span.add-medication input,
+span.remove-medication input {
   margin-right: 10px;
 }
 
