--- a/app/css/main.css
+++ b/app/css/main.css
@@ -36,6 +36,7 @@ div.page-header {
   width: 810px;
   padding: 0px 40px;
   margin: 20px auto 6px;
+  text-align: center;
 }
 
 div.page-header h1 {
